log/build_2025-07-30_19-34-36/my_nav_pkg/stderr.log
  File "/home/bansong/gpsnav_ws/install/my_nav_pkg/lib/python3.10/site-packages/my_nav_pkg/waypoint_follower_node.py", line 3
    from nav\_msgs.msg import Odometry
             ^
SyntaxError: unexpected character after line continuation character

